--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.agomezmoron</groupId>
 	<artifactId>appium-handler</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>Appium handler</name>
 	<packaging>jar</packaging>
 
@@ -13,11 +13,9 @@
 		</license>
 	</licenses>
 
-
 	<prerequisites>
 		<maven>3.1.1</maven>
 	</prerequisites>
-
 
 	<scm>
 		<url>https://github.com/agomezmoron/appium-handler.git</url>
