--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
-/target/
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+target
+bin
+test-output
+output
+*.log
+
+# eclipse files
+.project
+.classpath
+.settings
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
