--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.agomezmoron</groupId>
 	<artifactId>appium-handler</artifactId>
-	<version>0.0.2-SANPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>Appium handler</name>
 	<packaging>jar</packaging>
 
