--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.agomezmoron</groupId>
 	<artifactId>appium-handler</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
+	<version>0.0.3</version>
 	<name>Appium handler</name>
 	<packaging>jar</packaging>
 
@@ -47,7 +47,7 @@
 		<github.global.server>github</github.global.server>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<appium-java-client.version>3.1.0</appium-java-client.version>
+		<appium-java-client.version>4.1.2</appium-java-client.version>
 		<log4j.version>1.2.17</log4j.version>
 	</properties>
 
